# TravellingSalesman

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: city.h  cityutils.h  individualutils.h
lib/: CMakeLists.txt  city.cpp  cityutils.cpp
mockdata/: cities.txt
scripts/: start_app.sh
src/: CMakeLists.txt  gaussianrandomgenerator.cpp  gaussianrandomgenerator.h  individual.cpp  individual.h
